fix: fixed overflow bug while changing screen resolution

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -146,4 +146,8 @@
         display: none;
     }
 
+    .overflow-hidden{
+        overflow-y: scroll;
+    }
+
 }
